--- a/laravel-api/composer.json
+++ b/laravel-api/composer.json
@@ -12,6 +12,7 @@
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
+        "laravel/telescope": "^5.6",
         "laravel/tinker": "^2.10.1",
         "spatie/laravel-query-builder": "^6.3"
     },
